--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Explorer</title>
+    <title>Movie Streaming</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Netflix+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
-        <h1>Movie Explorer</h1>
-        <input type="text" id="search" placeholder="Search for movies...">
+        <h1>Movie Stream</h1>
+        <nav>
+            <button onclick="fetchMovies('popular')">Popular</button>
+            <button onclick="fetchMovies('top_rated')">Top Rated</button>
+            <button onclick="fetchMovies('upcoming')">Upcoming</button>
+        </nav>
     </header>
-    
-    <nav>
-        <button class="filter" data-category="popular">Popular</button>
-        <button class="filter" data-category="top_rated">Top Rated</button>
-        <button class="filter" data-category="upcoming">Upcoming</button>
-    </nav>
-    
-    <main id="movie-list"></main>
 
-    <script src="script.js"></script>
+    <main>
+        <div id="movies-container"></div>
+    </main>
+
+    <div id="movie-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <div id="movie-details"></div>
+            <button id="play-movie">Play Movie</button>
+        </div>
+    </div>
 </body>
 </html>
